Initial production code

--- a/common.env
+++ b/common.env
@@ -2,3 +2,10 @@ DATABASE_URL=postgres://saleor:saleor@db/saleor
 DEFAULT_FROM_EMAIL=noreply@example.com
 CELERY_BROKER_URL=redis://redis:6379/1
 SECRET_KEY=changeme
+ALLOWED_CLIENT_HOSTS=thescoreproject.com,localhost,127.0.0.1
+# server domains
+ALLOWED_HOSTS=thescoreproject.com,localhost,127.0.0.1
+DEBUG=False
+ENABLE_DEBUG_TOOLBAR=False
+PLAYGROUND_ENABLED=False
+API_URI=http://thescoreproject.com/graphql/
